Updated with Java12 support